<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Existing Views -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateTimeLoc"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:backgroundTint="@color/highlight"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/selectTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/highlight"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/selectOnMapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_on_map"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/highlight"
        android:textColor="@color/white"/>

    <!-- Popup Container for Map -->
    <FrameLayout
        android:id="@+id/map_popup_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/inviteConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/highlight"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/inviteCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/highlight"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
